@@ -5,6 +5,8 @@ BUGFIXES
 
     o Fix for crash when --normal_panel in NormalDB.R contained no variants
       (#180).
+    o Fix for crash when rtracklayer failed to parse --infile in
+      FilterCallableLoci.R (#182)
 
 
 Changes in version 1.22.0
